update code guide7